# internal/lab/model_laboratory.go
@@ -1,0 +1,26 @@
+/*
+ * Laboratory API
+ *
+ * Laboratory management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xmagulam@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package lab
+
+type Laboratory struct {
+
+	// Unique identifier of the laboratory
+	Id string `json:"id"`
+
+	// Human readable display name of the laboratory
+	Name string `json:"name"`
+
+	RoomNumber string `json:"roomNumber"`
+
+	LabAnalyses []LaboratoryAnalysis `json:"labAnalyses,omitempty"`
+
+	SampleEvidences []SampleEvidence `json:"sampleEvidences,omitempty"`
+}
